--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,13 +6,12 @@ import Card from '../components/Card.astro';
 async function getMovieDataFromOmdb(movieTitle) {
   const response = await fetch(
     `http://www.omdbapi.com/?apikey=${import.meta.env.OMDB_API_KEY}&t=${movieTitle}&type=movie`,
-  );
-  
+  )
+
   let movieData = await response.json();
 
   return movieData;
 }
-
 ---
 
 <Layout title="Moviez">
@@ -28,16 +27,18 @@ async function getMovieDataFromOmdb(movieTitle) {
 
     <ul id="movieList" role="list" class="link-card-grid">
       {
-        movieJSON.movies.map((movie) => (
-          
-          <Card
-            href={getMovieDataFromOmdb(movie.title).then((movieData) => {`https://www.imdb.com/title/${movieData.imdbID}/`})}
-            title={`${movie.title}`}
-            poster={`${getMovieDataFromOmdb(movie.title).posterUrl}`}
-            plot={`${movie.plot}`}
-            year={`${movie.year}`}
-          />
-        ))
+        movieJSON.movies.map(async (movie) => {
+          const omdbData = await getMovieDataFromOmdb(movie.title);
+
+          return (
+            <Card
+              href={`https://www.imdb.com/title/${omdbData.imdbID}/`}
+              title={`${movie.title}`}
+              poster={omdbData.Poster}
+              plot={`${movie.plot}`}
+              year={`${movie.year}`}
+            />)
+        })
       }
     </ul>
   </main>
